tests/neg/semantic_assert_bad_arity.baa
// EXPECT: عدد معاملات 'تأكد' غير صحيح

صحيح الرئيسية() {
    تأكد(صواب).
    إرجع ٠.
}
